@@ -112,9 +112,9 @@ install-data-local:
 	$(INSTALL) -d -g @vpopgroup@ -m 0700 -o @vpopuser@ \
 	  $(DESTDIR)@vpopmaildir@/@domains_dir@
 
-	echo "-I$(DESTDIR)@vpopmaildir@/include" > \
+	echo "-I@vpopmaildir@/include" > \
 	 $(DESTDIR)@vpopmaildir@/etc/inc_deps
-	echo "-L$(DESTDIR)@vpopmaildir@/lib -lvpopmail @auth_libs@ @LIBS@" > \
+	echo "-L@vpopmaildir@/lib -lvpopmail @auth_libs@ @LIBS@" > \
 	 $(DESTDIR)@vpopmaildir@/etc/lib_deps
 
 	if test ! -r $(VLIMITS); then \
